fix: backdrop overlays sidebar on mobile
backdrop has z-index of 3, sidebar had z-index of 1 hence overlaying.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -66,7 +66,7 @@ mat-sidenav-content {
 
 .sidenav {
   width: 250px;
-  z-index: 1 !important;
+  z-index: 4 !important;
 }
 
 .active-link {
